ヘッダー・フッター調整

--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -14,6 +14,15 @@
   visibility: hidden;
 }
 
+// ヘッダー、フッター
+.header {
+  background-color: #5a5d5e;
+}
+
+.footer {
+  background-color: #5a5d5e;
+}
+
 /* ブログぺーじ */
 .blog {
   h1 {
